# nonans

./: CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml  reproduce.py  reproduce.sh  zenodo.json
datasets/: analyze_real_traces.py  nri_dataset_validation.py  nri_failure_dataset.json  nri_failure_dataset_generator.py  nri_failure_dataset_torch.py  silent_degradation_test.py  silent_degradation_validated.py
docs/: APPLICATION_BRIEF.md  GPU_VALIDATION_PLAN.md
paper/: BIBLIOGRAPHY_STATUS.md  paper.bib  paper.md  preprint.tex
protocols/: p1_unified_identity_torch.py  p2_overhead_torch.py  p3_early_warning_torch.py  p4_gpt2_attention_monitor.py  p5_real_divergence.py
src/nonans/: __init__.py  _torch_bindings.py  _version.py  bindings.py  decision.py  engine.py  primitives.py  protocol.py  runtime.py  telemetry.py
src/nonans/bench/: __init__.py  __main__.py  _harness.py  b1_unified_identity.py  b2_detection.py  b3_overhead.py  b4_early_warning.py  b5_comparison.py  b6_calibration.py
tests/: conftest.py  test_benchmarks.py  test_decision.py  test_primitives.py  test_protocol.py
